--- a/331-intro-to-vite/src/assets/style.css
+++ b/331-intro-to-vite/src/assets/style.css
@@ -1,2 +1,7 @@
-@import "tailwindcss/preflight";
-@import "tailwindcss/utilities";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+h1 {
+  @apply text-4xl mb-8;
+}
